<?xml version="1.0"?>
<package>
  <name>map_organizer_msgs</name>
  <version>0.1.0</version>
  <description>Message definitions for map_organizer_msgs package</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
</package>
