<?xml version="1.0"?>
<package>
  <name>neonavigation_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for neonavigation package</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>planner_cspace_msgs</run_depend>
  <run_depend>costmap_cspace_msgs</run_depend>
  <run_depend>map_organizer_msgs</run_depend>
  <run_depend>trajectory_tracker_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
