<?xml version="1.0"?>
<package>
  <name>planner_cspace_msgs</name>
  <version>0.1.0</version>
  <description>Message definitions for planner_cspace package</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
